<resources>
    <string name="app_name">BookLogger</string>

    <string name="title_reading">Lendo</string>
    <string name="title_read">Lido</string>
    <string name="title_to_read">Lerei</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_settings">Configurações</string>

    <string name="txt_email">E-mail</string>
    <string name="txt_password">Senha</string>

    <string name="btn_login">Login</string>
    <string name="btn_signup">Cadastre-se</string>
    <string name="btn_signup_submit">Cadastrar</string>

    <string name="btn_search">Pesquisar</string>

    <string name="txt_borrowed">Emprestado</string>
    <string name="btn_add_book">Adicionar</string>

    <string-array name="book_status">
        <item>Lendo</item>
        <item>Lido</item>
        <item>Lerei</item>
        <item>Wishlist</item>
    </string-array>

    <string name="btn_edit_book">Editar</string>
    <string name="btn_delete_book">Apagar</string>
    <string name="btn_search_price">Pesquisar preços</string>

    <string name="txt_current_password">Senha atual</string>
    <string name="txt_new_password">Nova senha</string>
    <string name="txt_repeat_new_password">Repetir nova senha</string>
    <string name="btn_update_password">Atualizar senha</string>
    <string name="btn_logout">Logout</string>

</resources>
