<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.SettingsFragment">

    <EditText
        android:id="@+id/txt_settings_email"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:ems="10"
        android:inputType="none" />

    <EditText
        android:id="@+id/txt_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_current_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txt_repeat_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_repeat_new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update_password" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout" />

</LinearLayout>