<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.BookInfoActivity">

    <ImageView
        android:id="@+id/img_book_info_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/txt_book_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/txt_book_info_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/txt_book_info_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/txt_book_info_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/txt_book_borrowed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="17sp"/>

    <Button
        android:id="@+id/btn_info_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:text="@string/btn_search_price" />

    <Button
        android:id="@+id/btn_info_edit_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/btn_edit_book" />

    <Button
        android:id="@+id/btn_info_delete_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/btn_delete_book"
        android:background="#FF4444"/>

</LinearLayout>